# hypatian

./: .bashrc  .dockerignore  .editorconfig  .env  .flake8  .flaskenv  .gitattributes  .gitignore  .pylintrc  Dockerfile  MANIFEST.in  README.rst  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  hypatian.conf  hypatian.wsgi  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  template_commit  wsgi.py
hypatian/: __init__.py  blueprints.py  commands.py  config.py  error_handlers.py  extensions.py  jinja.py  loggers.py  mixins.py  utils.py
hypatian/api/: __init__.py  routes.py  utils.py
hypatian/auth/: __init__.py  forms.py  routes.py
hypatian/auth/templates/auth/: login.jinja  profile.jinja  register.jinja  secret.jinja
hypatian/demographics/: __init__.py  forms.py  routes.py
hypatian/demographics/templates/demographics/: patient_card.jinja  patient_details.jinja  patient_entry.jinja  patients.jinja  snippits.js
hypatian/example/: __init__.py  routes.py
hypatian/main/: __init__.py  routes.py
hypatian/models/: __init__.py  base_table.py  inventory.py  inventory_location.py  patient.py  patient_phone_number.py  phone_number_type.py  product.py  product_brand.py  product_category.py  product_cost.py  requisition_order.py  requisition_order_status.py  unit_of_measure.py  user.py  user_role.py  utils.py  utils2.py
hypatian/sandbox/: __init__.py  forms.py  routes.py  utils.py
hypatian/sandbox/templates/sandbox/: bootstraptable.js  card.jinja  patients_ajax_datatable.jinja  patients_axios.jinja  simple.jinja  test.jinja  username.jinja
hypatian/templates/: error.jinja  index.jinja  layout.jinja  layout_navbar.jinja
scripts/: apache.sh  clear_slate.zsh  create_certs.sh  dev_dc_remake.zsh  dev_dc_start.zsh  entrypoint.sh  notes.sh  preare_certs_info.sh  preare_ssl_debug.sh  prepare_dev_env.zsh  prepare_ssl.zsh  prepare_wheel.zsh  run_apache2.sh  test.zsh  test_api.zsh  test_dc_remake.zsh  test_dc_start.zsh  test_prepare_apache.sh
ssl/ca/root/: ca.cnf
ssl/localhost/: localhost.cnf
tests/: conftest.py  test_eg.py  test_main.py
