[metadata]
name = hypatian
version = 1.0.0
url = https://github.com/
author = First Last
author_email = first.last@email.com
maintainer = First Last
maintainer_email = first.last@email.com
description = A flask-based webserver using apache and Docker.
license = From Dyvers Hands
license_files = LICENSE.rst
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = flask
platforms = any
classifiers =
	Development Status :: 4 - Beta
	Environment :: Web Environment
	Framework :: Flask
	Natural Language :: English
	Operating System :: OS Independent
	Operating System :: POSIX
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: SQL
	Topic :: Database
	Topic :: Database :: Front-Ends
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: Dynamic Content
	Topic :: Internet :: WWW/HTTP :: WSGI
	Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options]
zip_safe = False
package_dir =
	=hypatian
packages = find:
include_package_data = True
python_requires = >= 3.7
install_requires =
	click >= 8.0.3
	Flask >= 2.0.2
	Flask-Bcrypt>=0.7.1
	Flask-Login>=0.5.0
	Flask-SQLAlchemy>=2.5.1
	Flask-WTF>=1.0.0
	itsdangerous >= 2.0.1
	Jinja2 >= 3.0.3
	MarkupSafe >= 2.0.1
	Werkzeug >= 2.0.2
	requests >= 2.26.0
setup_requires =
	wheel >= 0.37.0

[options.packages.find]
where = hypatian
exclude =
	.git
	.idea
	.pytest_cache
	.venv
	__pycache__
	build
	database
	dist
	logs
	notes
	schema
	scripts
	ssl
	tests
	wheelhouse

[egg_info]
egg_base = ./dist
tag_build =
tag_date = 0

[sdist]
dist_dir = ./dist
formats = gztar

[build]
build_base = ./build
build_lib = ./build/lib

[bdist_wheel]
bdist_dir = ./dist
dist_dir = ./wheelhouse
# {python tag}-{abi tag}-{platform tag}
plat_name = any
python_tag = py3
universal = 0
